--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,13 @@
+# Ignore node_modules
+frontend/node_modules/
+backend/node_modules/
+
+# Ignore build files
+dist/
+build/
+
+# Ignore lock files (optional if using yarn/bun)
+bun.lockb
+
 # Logs
-logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
